eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: spring
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: 276264299222.dkr.ecr.us-east-2.amazonaws.com/kiran-ecr:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"                         
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: spring
  namespace: default  
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
  
spec:
  type: NodePort
  selector:
    app: spring
  ports:
    - port: 80
      targetPort: 8080
